--- a/page2.html
+++ b/page2.html
@@ -10,41 +10,41 @@
         /* Cube */
         .front {
             transform: translateZ(100px);
-            background-image: url("../cubes-odd/images/ODD2/face1.png");
+            background-image: url("/ODD2/face1.png");
             background-size: cover;
         }
 
         .back {
             transform: translateZ(-100px) rotateY(180deg);
-            background-image: url("../cubes-odd/images/ODD2/face2.png");
+            background-image: url("/ODD2/face2.png");
             background-size: cover;
         }
 
         .right {
             transform: rotateY(-270deg) translateX(100px);
             transform-origin: top right;
-            background-image: url("../cubes-odd/images/ODD2/face3.png");
+            background-image: url("../ODD2/face3.png");
             background-size: cover;
         }
 
         .left {
             transform: rotateY(270deg) translateX(-100px);
             transform-origin: center left;
-            background-image: url("../cubes-odd/images/ODD2/face4.png");
+            background-image: url("../ODD2/face4.png");
             background-size: cover;
         }
 
         .top {
             transform: rotateX(-270deg) translateY(-100px);
             transform-origin: top center;
-            background-image: url("../cubes-odd/images/ODD2/face5.png");
+            background-image: url("/ODD2/face5.png");
             background-size: cover;
         }
 
         .bottom {
             transform: rotateX(270deg) translateY(100px);
             transform-origin: bottom center;
-            background-image: url("../cubes-odd/images/ODD2/face6.png");
+            background-image: url("../ODD2/face6.png");
             background-size: cover;
         }
     </style>
