--- a/page2.html
+++ b/page2.html
@@ -30,7 +30,7 @@
         .left {
             transform: rotateY(270deg) translateX(-100px);
             transform-origin: center left;
-            background-image: url("../ODD2/face4.png");
+            background-image: url("/ODD2/face4.png");
             background-size: cover;
         }
 
@@ -44,7 +44,7 @@
         .bottom {
             transform: rotateX(270deg) translateY(100px);
             transform-origin: bottom center;
-            background-image: url("../ODD2/face6.png");
+            background-image: url("/ODD2/face6.png");
             background-size: cover;
         }
     </style>
@@ -77,7 +77,7 @@
             <h3 class="odd2">Fonds de Solidarité et de Développement des Initiatives Étudiantes (FSDIE)</h3>
             <p>Le Fonds de Solidarité et de Développement des Initiatives Étudiantes (FSDIE) encourage la vie associative étudiante en finançant des projets et en offrant un soutien financier aux étudiants. Institué en 2001 par le ministère de l'Éducation Nationale et le ministère de la Recherche, il est alimenté par une partie des droits d'inscription. Géré par une commission, il finance des projets individuels et collectifs, favorisant ainsi l'épanouissement des étudiants et l'animation du campus. Depuis 2019, le FSDIE fait partie intégrante du budget de la CVEC, contribuant ainsi à soutenir les initiatives étudiantes et à promouvoir le bien-être des étudiants.</p>
              <p><a href="https://www.univ-montp3.fr/fr/organisation/comit%C3%A9s-commissions/fonds-de-solidarit%C3%A9-et-de-d%C3%A9veloppement-des-initiatives" target="_blank">
-    <img src="../cubes-odd/images/learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
+    <img src="/learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
                  </a></p>
         </div>
         <!-- Deuxième colonne -->
@@ -85,7 +85,7 @@
             <h3 class="odd2">Festival de lutte contre les discriminations - Pauvretés</h3>
             <p>La précarité menstruelle se manifeste lorsque les personnes réglées rencontrent des difficultés à accéder aux produits d'hygiène en raison de contraintes financières. Cela peut entraîner leur exclusion sociale, notamment à l'école, en raison d'absences fréquentes voire d'un abandon scolaire. Pour sensibiliser à ce problème et offrir des solutions durables, l'UPVM distribue gratuitement des protections périodiques écologiques et lavables !</p>
              <p><a href="https://www.univ-montp3.fr/fr/communiques/festival-de-lutte-contre-les-discriminations-pauvret%C3%A9s-entre-r%C3%A9silience-et" target="_blank">
-    <img src="../cubes-odd/images/learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
+    <img src="/learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
                  </a></p>
         </div>
         <!-- Troisième colonne -->
@@ -93,7 +93,7 @@
             <h3 class="odd2">Lutte contre la précarité menstruelle</h3>
             <p>La 13ème édition du Festival de lutte contre les discriminations de l'Université, ayant pour thème "Pauvretés : Entre Résilience et Résistance", a été organisée par la Mission Égalité de l'Université Paul-Valéry et ses partenaires. Ce rendez-vous visait à explorer les liens entre la pauvreté et les discriminations, mettant en lumière l'impact de la précarité, qui touche près de 57 % des étudiants de l'Université Paul-Valéry. Du 9 au 13 octobre 2023, le Festival a offert un espace de débats et de partage, soulignant la résilience des personnes touchées et encourageant la réflexion sur les moyens de lutter contre ces injustices.</p>
              <p><a href="https://www.univ-montp3.fr/fr/evenements/journ%C3%A9e-contre-la-pr%C3%A9carit%C3%A9-menstruelle-distribution-de-protections-p%C3%A9riodiques" target="_blank">
-    <img src="../cubes-odd/images/learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
+    <img src="/learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
                  </a></p>
         </div>
     </div>
