--- a/page2.html
+++ b/page2.html
@@ -8,7 +8,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js" type="text/javascript"></script>
     <style>
         /* Cube */
-
 .cube > div:first-child {
   -webkit-transform: rotateX(90deg) translateZ(100px);
   -moz-transform: rotateX(90deg) translateZ(100px);
@@ -69,12 +68,6 @@ background-size: cover;
 background-size: cover;
   outline: 1px solid #eee; }
 
-object {
-  opacity: 0.5; }
-
-object:hover {
-  opacity: 1; }
-
 @media (max-width: 640px) {
   .viewport {
     -webkit-transform: scale(0.6, 0.6);
@@ -123,25 +116,25 @@ object:hover {
     <div class="grid-container">
         <!-- Première colonne -->
         <div class="grid-item">
-            <h3 class="odd2">Fonds de Solidarité et de Développement des Initiatives Étudiantes (FSDIE)</h3>
-            <p>Le Fonds de Solidarité et de Développement des Initiatives Étudiantes (FSDIE) encourage la vie associative étudiante en finançant des projets et en offrant un soutien financier aux étudiants. Institué en 2001 par le ministère de l'Éducation Nationale et le ministère de la Recherche, il est alimenté par une partie des droits d'inscription. Géré par une commission, il finance des projets individuels et collectifs, favorisant ainsi l'épanouissement des étudiants et l'animation du campus. Depuis 2019, le FSDIE fait partie intégrante du budget de la CVEC, contribuant ainsi à soutenir les initiatives étudiantes et à promouvoir le bien-être des étudiants.</p>
-             <p><a href="https://www.univ-montp3.fr/fr/organisation/comit%C3%A9s-commissions/fonds-de-solidarit%C3%A9-et-de-d%C3%A9veloppement-des-initiatives" target="_blank">
+            <h3 class="odd2">Actions menées par la DDRS</h3>
+            <p>La DDRS a mené différentes actions sur la thématique de la faim :  distribution de petits déjeuners, distribution de paniers de légumes bio, organisation de journées thématiques et de conférences. </p>
+             <p><a href="https://www.univ-montp3.fr/fr/universit%C3%A9-citoyenne-et-durable/d%C3%A9veloppement-durable-et-responsabilit%C3%A9-soci%C3%A9tale" target="_blank">
     <img src="learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
                  </a></p>
         </div>
         <!-- Deuxième colonne -->
         <div class="grid-item">
-            <h3 class="odd2">Festival de lutte contre les discriminations - Pauvretés</h3>
-            <p>La précarité menstruelle se manifeste lorsque les personnes réglées rencontrent des difficultés à accéder aux produits d'hygiène en raison de contraintes financières. Cela peut entraîner leur exclusion sociale, notamment à l'école, en raison d'absences fréquentes voire d'un abandon scolaire. Pour sensibiliser à ce problème et offrir des solutions durables, l'UPVM distribue gratuitement des protections périodiques écologiques et lavables !</p>
-             <p><a href="https://www.univ-montp3.fr/fr/communiques/festival-de-lutte-contre-les-discriminations-pauvret%C3%A9s-entre-r%C3%A9silience-et" target="_blank">
+            <h3 class="odd2">Épicerie sociale et solidaire</h3>
+            <p>L'espace solidaire étudiant, au-delà d'une simple épicerie sociale, sert de lieu de rencontres et de partage pour les étudiants précaires, les aidant dans leurs difficultés alimentaires, sociales et administratives. Des services supplémentaires incluent des permanences santé bimensuelles, des réunions avec la Caisse Primaire d'Assurance Maladie mensuelles, des ateliers de réparation de vélos les premiers mardi et jeudi du mois, et des séances de sophrologie les lundis, mardis et mercredis matin. Les partenaires impliqués sont le Secours Populaire Français pour la gestion de l'épicerie, l'Atelier 34 pour la réparation de vélos dans le cadre du plan de déplacement de l'Université, et l'Association Étudiante Especiarià pour l'animation du lieu. Situé au Campus Paul-Valéry, route de Mende, sous le bâtiment "I", l'espace est ouvert tous les jeudis de 14h à 17h.</p>
+             <p><a href="https://www.univ-montp3.fr/fr/communiques/lespace-solidarité-étudiantes-rouvre-ses-portes-à-l’université-paul-valery" target="_blank">
     <img src="learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
                  </a></p>
         </div>
         <!-- Troisième colonne -->
         <div class="grid-item">
-            <h3 class="odd2">Lutte contre la précarité menstruelle</h3>
-            <p>La 13ème édition du Festival de lutte contre les discriminations de l'Université, ayant pour thème "Pauvretés : Entre Résilience et Résistance", a été organisée par la Mission Égalité de l'Université Paul-Valéry et ses partenaires. Ce rendez-vous visait à explorer les liens entre la pauvreté et les discriminations, mettant en lumière l'impact de la précarité, qui touche près de 57 % des étudiants de l'Université Paul-Valéry. Du 9 au 13 octobre 2023, le Festival a offert un espace de débats et de partage, soulignant la résilience des personnes touchées et encourageant la réflexion sur les moyens de lutter contre ces injustices.</p>
-             <p><a href="https://www.univ-montp3.fr/fr/evenements/journ%C3%A9e-contre-la-pr%C3%A9carit%C3%A9-menstruelle-distribution-de-protections-p%C3%A9riodiques" target="_blank">
+            <h3 class="odd2">Panneaux d'informations dans les cafétérias CROUS</h3>
+            <p>Dans les cafétérias gérées par le CROUS sur le site route de mende et St Charles, il existe des panneaux d'information rappelant l'engagement et les produits proposés.</p>
+             <p><a href="https://www.univ-montp3.fr/fr/actualit%C3%A9s/journ%C3%A9e-d%C3%A9veloppement-durable-responsabilit%C3%A9-soci%C3%A9tale-3" target="_blank">
     <img src="learn-more.png" alt="En savoir plus" title="En savoir plus" class="learn-more">
                  </a></p>
         </div>
