--- a/page1.html
+++ b/page1.html
@@ -5,14 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ODD 1 - PAS DE PAUVRETÉ</title>
     <link rel="stylesheet" href="style.css">
-    <script type="importmap">
-{
-"imports": {
-"three": "<https://cdn.jsdelivr.net/npm/three@v0.163.0/build/three.module.js>",
-"three/addons/": "<https://cdn.jsdelivr.net/npm/three@v0.163.0/examples/jsm/>"
-}
-}
-</script>
 </head>
 <body>
     <!-- Contenu à droite -->
@@ -56,51 +48,23 @@
     </div>
         </div>
     
-    
-    <script>
-import as THREE from 'three';
-import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
-
-var canvas = document.getElementById("cube")
-const renderer = new THREE.WebGLRenderer({canvas: canvas});
-renderer.setSize( canvas.width, canvas.height );
-renderer.setClearColor(0xffffff, 0);
-
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera( 45, canvas.width / canvas.height, 1, 10000 );
-const controls = new OrbitControls( camera, renderer.domElement );
-
-const geometry = new THREE.BoxGeometry( 2, 2, 2 );
-
-const material = [
-new THREE.MeshBasicMaterial( {map: new THREE.TextureLoader().load( "<https://ahdevzone.github.io/ODD1/face6.png>" )} ), // droite
-new THREE.MeshBasicMaterial( {map: new THREE.TextureLoader().load( "<https://ahdevzone.github.io/ODD1/face5.png>" )} ), // gauche
-new THREE.MeshBasicMaterial( {map: new THREE.TextureLoader().load( "<https://ahdevzone.github.io/ODD1/face1.png>" )} ), // haut
-new THREE.MeshBasicMaterial( {map: new THREE.TextureLoader().load( "<https://ahdevzone.github.io/ODD1/face3.png>" )} ), // bas
-new THREE.MeshBasicMaterial( {map: new THREE.TextureLoader().load( "<https://ahdevzone.github.io/ODD1/face2.png>" )} ), // avant
-new THREE.MeshBasicMaterial( {map: new THREE.TextureLoader().load( "<https://ahdevzone.github.io/ODD1/face4.png>" )} ), // arriere
-];
-const cube = new THREE.Mesh( geometry, material );
-scene.add( cube );
-
-camera.position.y = 2;
-camera.position.z = 4.5;
-controls.enablePan = false;
-controls.enableZoom = false;
-controls.autoRotate = true;
-controls.update();
-
-function animate() {
-requestAnimationFrame( animate );
-
-controls.update();
-
-renderer.render( scene, camera );
-
+<script type="importmap">
+{
+  "imports": {
+    "three": "https://cdn.jsdelivr.net/npm/three@v0.163.0/build/three.module.js",
+    "three/addons/": "https://cdn.jsdelivr.net/npm/three@v0.163.0/examples/jsm/"
+  }
 }
-
-animate();       
 </script>
+<script>
+  var face_up = "https://ahdevzone.github.io/ODD1/face1.png";
+  var face_down = "https://ahdevzone.github.io/ODD1/face3.png";
+  var face_front = "https://ahdevzone.github.io/ODD1/face2.png";
+  var face_back = "https://ahdevzone.github.io/ODD1/face4.png";
+  var face_left = "https://ahdevzone.github.io/ODD1/face5.png";
+  var face_right = "https://ahdevzone.github.io/ODD1/face6.png";
+</script>
+<script type="module" src="cube.js"></script>
 
 </body>
 </html>
