--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
     <main>  
         <!-- Menu -->
 <div id="menu">
-    <div class="icon"><a href="#" onclick="loadContent('page1.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-01.png&fileId=47330870&x=2880&y=1800&a=true" alt="ODD 1" title="Pas de pauvreté"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page2.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-02.png&fileId=47330873&x=2880&y=1800&a=true" alt="ODD 2" title="Faim Zéro"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page3.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-03.png&fileId=47330871&x=2880&y=1800&a=true" alt="ODD 3" title="Bonne santé et bien-être"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page4.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-04.png&fileId=47330880&x=2880&y=1800&a=true" alt="ODD 4" title="Education de qualité"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page5.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-05.png&fileId=47330879&x=2880&y=1800&a=true" alt="ODD 5" title="Egalité entre les sexes"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page6.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-06.png&fileId=47330875&x=2880&y=1800&a=true" alt="ODD 6" title="Eau propre et assainissement"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page7.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-07.png&fileId=47330876&x=2880&y=1800&a=true" alt="ODD 7" title="Energie propre et d'un coût abordable"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page8.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-08.png&fileId=47330867&x=2880&y=1800&a=true" alt="ODD 8" title="Travail décent et croissance économique"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page9.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-09.png&fileId=47330864&x=2880&y=1800&a=true" alt="ODD 9" title="Industrie, innovation et infrastructure"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page10.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-10.png&fileId=47330881&x=2880&y=1800&a=true" alt="ODD 10" title="Inégalités réduites"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page11.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-11.png&fileId=47330882&x=2880&y=1800&a=true" alt="ODD 11" title="Villes et communautés durables"></a></div>
-    <div class="icon"> <a href="#" onclick="loadContent('page12.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-12.png&fileId=47330877&x=2880&y=1800&a=true" alt="ODD 12" title="Consommation et production responsables"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page13.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-13.png&fileId=47330878&x=2880&y=1800&a=true" alt="ODD 13" title="Mesures relatives à la lutte contre les changements climatiques"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page14.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-14.png&fileId=47330868&x=2880&y=1800&a=true" alt="ODD 14" title="Vie aquatique"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page15.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-15.png&fileId=47330869&x=2880&y=1800&a=true" alt="ODD 15" title="Vie terrestre"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page16.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-16.png&fileId=47330874&x=2880&y=1800&a=true" alt="ODD 16" title="Paix, justice et institutions efficaces"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page17.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-17.png&fileId=47330872&x=2880&y=1800&a=true" alt="ODD 17" title="Partenariats pour la réalisation des objectifs"></a></div>
-    <div class="icon"><a href="#" onclick="loadContent('page18.html')"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/SDG%20Wheel_WEB.png&fileId=47612814&x=2880&y=1800&a=true" alt="Aide et infos" title="Aide et infos"></a></div>
+    <div class="icon"><a href="page1.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-01.png&fileId=47330870&x=2880&y=1800&a=true" alt="ODD 1" title="Pas de pauvreté"></a></div>
+    <div class="icon"><a href="page2.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-02.png&fileId=47330873&x=2880&y=1800&a=true" alt="ODD 2" title="Faim Zéro"></a></div>
+    <div class="icon"><a href="page3.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-03.png&fileId=47330871&x=2880&y=1800&a=true" alt="ODD 3" title="Bonne santé et bien-être"></a></div>
+    <div class="icon"><a href="page4.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-04.png&fileId=47330880&x=2880&y=1800&a=true" alt="ODD 4" title="Education de qualité"></a></div>
+    <div class="icon"><a href="page5.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-05.png&fileId=47330879&x=2880&y=1800&a=true" alt="ODD 5" title="Egalité entre les sexes"></a></div>
+    <div class="icon"><a href="page6.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-06.png&fileId=47330875&x=2880&y=1800&a=true" alt="ODD 6" title="Eau propre et assainissement"></a></div>
+    <div class="icon"><a href="page7.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-07.png&fileId=47330876&x=2880&y=1800&a=true" alt="ODD 7" title="Energie propre et d'un coût abordable"></a></div>
+    <div class="icon"><a href="page8.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-08.png&fileId=47330867&x=2880&y=1800&a=true" alt="ODD 8" title="Travail décent et croissance économique"></a></div>
+    <div class="icon"><a href="page9.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-09.png&fileId=47330864&x=2880&y=1800&a=true" alt="ODD 9" title="Industrie, innovation et infrastructure"></a></div>
+    <div class="icon"><a href="page10.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-10.png&fileId=47330881&x=2880&y=1800&a=true" alt="ODD 10" title="Inégalités réduites"></a></div>
+    <div class="icon"><a href="page11.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-11.png&fileId=47330882&x=2880&y=1800&a=true" alt="ODD 11" title="Villes et communautés durables"></a></div>
+    <div class="icon"> <a href="page12.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-12.png&fileId=47330877&x=2880&y=1800&a=true" alt="ODD 12" title="Consommation et production responsables"></a></div>
+    <div class="icon"><a href="page13.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-13.png&fileId=47330878&x=2880&y=1800&a=true" alt="ODD 13" title="Mesures relatives à la lutte contre les changements climatiques"></a></div>
+    <div class="icon"><a href="page14.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-14.png&fileId=47330868&x=2880&y=1800&a=true" alt="ODD 14" title="Vie aquatique"></a></div>
+    <div class="icon"><a href="page15.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-15.png&fileId=47330869&x=2880&y=1800&a=true" alt="ODD 15" title="Vie terrestre"></a></div>
+    <div class="icon"><a href="page16.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-16.png&fileId=47330874&x=2880&y=1800&a=true" alt="ODD 16" title="Paix, justice et institutions efficaces"></a></div>
+    <div class="icon"><a href="page17.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/F-WEB-Goal-17.png&fileId=47330872&x=2880&y=1800&a=true" alt="ODD 17" title="Partenariats pour la réalisation des objectifs"></a></div>
+    <div class="icon"><a href="page18.html"><img src="https://upvdrive.univ-montp3.fr/apps/files_sharing/publicpreview/PD9YLCanfeYAZAc?file=/Groupe%20Mise%20en%20forme%20ODD_UPV/F%20SDG%20Icons%202019%20WEB/SDG%20Wheel_WEB.png&fileId=47612814&x=2880&y=1800&a=true" alt="Aide et infos" title="Aide et infos"></a></div>
 </div>
 
         <!-- Contenu à droite -->
@@ -62,27 +62,5 @@
         <button class="button-white"><a href="index.html">Retour à la page d'accueil</a></button>
     </footer>
     </main>
-
-<script>
-    // Variable pour stocker le contenu initial
-    var initialContent = document.getElementById('content').innerHTML;
-
-    // Fonction pour charger le contenu sans recharger la page
-    function loadContent(url) {
-        fetch(url)
-            .then(response => response.text())
-            .then(data => {
-                // Mettre à jour le contenu de la section #content
-                document.getElementById('content').innerHTML = data;
-            })
-            .catch(error => console.error('Erreur lors du chargement du contenu :', error));
-        return false;
-    }
-
-    // Fonction pour réafficher le contenu initial
-    function showInitialContent() {
-        document.getElementById('content').innerHTML = initialContent;
-    }
-</script>
 </body>
 </html>
