--- a/page1.html
+++ b/page1.html
@@ -69,7 +69,7 @@
         <p>Pour lutter contre la pauvreté, il est crucial d'adopter des politiques inclusives et durables, soutenues par une participation active de la société. Les gouvernements peuvent créer des emplois productifs et des opportunités pour les populations marginalisées, tandis que le secteur privé peut favoriser une croissance inclusive. La science a également un rôle vital à jouer, en permettant l'accès à l'eau potable et en améliorant l'hygiène pour réduire les risques sanitaires.</p>
         <p align="center"><button class="button odd1"><a href="https://www.un.org/sustainabledevelopment/fr/poverty/" target="_blank">En savoir plus</a></button></p>
         
-       <canvas id="cube" width="500" height="500"></canvas>
+       <canvas id="cube"></canvas>
     
      <!-- Conteneur de grille avec 3 colonnes pour l'image et le texte -->
     <div class="grid-container">
